k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: arogyalink

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
